...
    @IBOutlet weak var retryButton: UIButton?
    @IBOutlet weak var profileStackView: UIStackView?
    @IBOutlet weak var sectionCollectionView: UICollectionView?
    @IBOutlet weak var bottomContainer: UIView?
    @IBOutlet weak var pageController: UIPageControl?
    
    lazy var profileImage: UIImageView = {
        let imageView = UIImageView()
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.contentMode = .scaleAspectFit
        imageView.layer.borderWidth = 3
        imageView.layer.borderColor = UIColor.black.cgColor
        imageView.layer.cornerRadius = imageView.bounds.width / 2
...
